--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
                 <a href="#">
                     <i class="bi bi-bar-chart"></i>
-                    <span>Resports</span>
+                    <span>Reports</span>
                 </a>
                 <a href="#">
                     <i class="bi bi-bag"></i>
